Wraps location and region field in div.inputSmall so that it's styled correctly.

--- a/tool-ui/src/main/webapp/style/leaflet.less
+++ b/tool-ui/src/main/webapp/style/leaflet.less
@@ -469,7 +469,6 @@
 // Custom Styles for Location field maps.
 
 .locationMap, .regionMap { 
-    left: 7px;
     min-width: 500px;
     min-height: 500px;
 }
